[package]
name = "aes-kw"
version = "0.3.0-pre"
description = "NIST 800-38F AES Key Wrap (KW) and Key Wrap with Padding (KWP) modes"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/RustCrypto/key-wraps/tree/aes-kw"
repository = "https://github.com/RustCrypto/key-wraps"
keywords = ["crypto", "AES-KW", "KW", "AES-KWP", "KWP"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2021"
rust-version = "1.81"

[dependencies]
aes = "=0.9.0-pre.2"

const-oid = { version = "0.10.0", optional = true }

[dev-dependencies]
hex-literal = "0.3"

[features]
default = ["oid"]
oid = ["dep:const-oid"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
