[package]
name = "aes-kw"
version = "0.3.0-rc.0"
description = "NIST 800-38F AES Key Wrap (KW) and Key Wrap with Padding (KWP) modes"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/RustCrypto/key-wraps/tree/aes-kw"
repository = "https://github.com/RustCrypto/key-wraps"
keywords = ["crypto", "AES-KW", "KW", "AES-KWP", "KWP"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
aes = "0.9.0-rc.0"

const-oid = { version = "0.10", optional = true }

[dev-dependencies]
hex-literal = "1"

[features]
default = ["oid"]
oid = ["dep:const-oid"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
