[package]
name = "belt-kwp"
version = "0.1.0-rc.1"
description = "STB 34.101.30-2020 Key Wrap Algorithm (KWP) implementation using Belt block cipher"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustCrypto/key-wraps"
keywords = ["crypto", "BELT-KW", "KW", "BELT-KWP", "KWP"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[dependencies]
belt-block = "0.2.0-rc.3"

[dev-dependencies]
hex-literal = "1"

[features]
alloc = []
std = ["alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
